[package]
name = "snmp2"
version = "0.4.15"
edition = "2021"
description = "SNMP v1/v2/v3 sync/async client library with traps and MIB support"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/roboplc/snmp2"
readme = "README.md"
keywords = ["networking", "snmp", "monitoring"]

[package.metadata.docs.rs]
features = ["full", "openssl/vendored"]

[package.metadata.playground]
features = ["v3", "tokio", "openssl/vendored"]

[dependencies]
asn1-rs = "0.6"
snmptools = { version = "^0.1.2", optional = true }
tokio = { version = "1.47", features = ["net"], optional = true }
openssl = { version = "0.10", optional = true }

md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
digest = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
cipher = { version = "0.4", optional = true }
des = { version = "0.8", optional = true }
hmac = { version = "0.12", optional = true }
cbc = { version = "0.1", optional = true }
cfb-mode = { version = "0.8", optional = true }
rand = { version = "0.9", optional = true }

[dev-dependencies]
tokio = { version = "1" }

[features]
default = ["tokio", "v3_rust"]

mibs = ["dep:snmptools"]
tokio = ["dep:tokio"]
v3 = []
heap_buffers = []
full = ["mibs", "tokio", "v3_rust"]

v3_openssl = ["v3", "openssl"]
v3_rust = ["v3", "md-5", "sha1", "digest", "sha2", "aes", "cipher", "des", "hmac", "cbc", "cfb-mode", "rand"]
